# text-adventure

./: .gitignore  .pre-commit-config.yaml  .projections.json  LICENCE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  utils.py
controllers/: dungeon_controller.py
data/: actions.yaml  grammar.yaml  views.yaml
dungeon/: floors.yaml
dungeon/Sentient Valley/: enemies.yaml  items.yaml  npc.yaml  rooms.yaml  rules.yaml
dungeon/Wind Meadows/: enemies.yaml  npc.yaml  rooms.yaml  rules.yaml
models/characters/: character.py  npc.py
models/factories/: generator_factory.py  item_factory.py
models/generators/: generator.py
models/items/: equipments.py  inventory.py
models/locations/: coordinates.py  dungeon.py  floor.py  room.py
models/meta/: singleton.py
modules/: lexer.py  utils.py
modules/characters/: character.py  npc.py
modules/controllers/: actions.py  controller.py  dungeon_controller.py  engine.py  inventory.py  inventory_controller.py  item.py  item_controller.py  room_controller.py  selection.py
modules/factories/: controller_factory.py  generator_factory.py  generators.py  item_factory.py  items.py  view_factory.py
modules/generators/: field_generator.py  generator.py  item_generator.py
modules/items/: equipments.py  inventory.py  items.py
modules/locations/: coordinates.py  dungeon.py  floor.py  room.py
modules/views/: room.py  (+9 more)
plugins/: commands.py  main.py
resources/: actions.yaml  classes.yaml
src/: dungeon.py  factory.py  field.py  handler.py  parser.py  utils.py  view.py
tests/: conftest.py
text_adventure/: inventory.py  player.py
(+78 files in other folders)
